[project]
name = "npm-watch"
version = "0.1.0"
description = "Azdo Watcher for NPM Packages"
authors = [
    {name = "rothoma2",email = "thomcrnl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
